// Copyright 2021 CYBERCRYPT
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package authn;
option go_package = "encryption-service/authn";

import "common/scopes.proto";

service Encryptonize{
  // Creates a new user on the service
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){}

  // Logs in a user to the service
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse){}

  // Deletes a user in the service
  rpc RemoveUser (RemoveUserRequest) returns (RemoveUserResponse){}

  // Creates a new group
  rpc CreateGroup (CreateGroupRequest) returns (CreateGroupResponse){}

  // Adds a user to a group
  rpc AddUserToGroup (AddUserToGroupRequest) returns (AddUserToGroupResponse){}

  // Removes a user from a group
  rpc RemoveUserFromGroup (RemoveUserFromGroupRequest) returns (RemoveUserFromGroupResponse){}
}

message CreateUserRequest{
  repeated common.Scope scopes = 1;
}

message CreateUserResponse{
  string user_id = 1;
  string password = 2;
}

message LoginUserRequest{
  string user_id = 1;
  string password = 2;
}

message LoginUserResponse{
  string access_token = 1;
}

message RemoveUserRequest{
  string user_id = 1;
}

message RemoveUserResponse{}

message CreateGroupRequest{
  repeated common.Scope scopes = 1;
}

message CreateGroupResponse{
  string group_id = 1;
}

message AddUserToGroupRequest{
  string user_id = 1;
  string group_id = 2;
}

message AddUserToGroupResponse{
}

message RemoveUserFromGroupRequest{
  string user_id = 1;
  string group_id = 2;
}

message RemoveUserFromGroupResponse{
}
